test-cases/final-dump/incompatible_generics.exp
Error detected during type checking of module(s) incompatible_generics
[91mfinal-dump/incompatible_generics.wybe:1:25: Type of ?j incompatible with i
[0m
